--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "vue-infinite-scroll": "^2.0.1",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
-    "weixin-js-sdk": "^1.2.0",
-    "weui": "^1.1.2"
+    "vux": "^2.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -37,6 +36,8 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "node-sass": "^4.5.2",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
