--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-infinite-scroll": "^2.0.1",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
-    "vux": "^2.2.2"
+    "vux": "^2.2.2",
+    "weui": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -50,6 +51,7 @@
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.2.6",
+    "vux-loader": "^1.0.61",
     "webpack": "^2.3.3",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
