--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1",
     "vux": "^2.2.2",
+    "vux-loader": "^1.0.63",
     "weui": "^1.1.2"
   },
   "devDependencies": {
